--- a/pg2index.html
+++ b/pg2index.html
@@ -53,6 +53,12 @@
                 <h4>if you want to talk to Jamie in a room click on that button! --> </h4> 
                 <button onclick="talktojamie()" class="btn btn-success">Talk to Jamie</button>
             </div>
+            <br>
+            <div id="roomformichael">
+                <h3>Michael</h3>
+                <h4>if you want to talk to Michael in a room click on that button! --> </h4> 
+                <button onclick="talktomichael()" class="btn btn-success">Talk to Michael</button>
+            </div>
             
 
 
