--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
           <div class="col-lg-4 col-md-6 col-sm-6 col-xs-11 login_div">
             <center>
-              <img src="logo.png" class="logo"><!--need to brand later also-->
+              <img src="logo.png" class="logo">
               <h3>How We Can Chat!</h3>
               <h4>Login NOW!</h4>
               <div class="form-group">
                 <label>User Name:</label>
                 <input type="text" id="user_name" class="form-control" placeholder="User Name">
                 <br>
-                <input type="text" id="password" class="form-control" placeholder="Credentials">
+                <input type="password" id="password" class="form-control" placeholder="Credentials">
               </div>
-              <button id="login_button" class="btn btn-primary" onclick="addUser()">Start Chatting!</button>
+              <button id="login_button" class="btn btn-primary" onclick="addUser()">Start Chatting!</button>              
               <br><br>
             </center>
           </div>
